# 04-nbody-04-nbody

./: .gitignore  README.md  prova
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.txt  animate.py  cmake_install.cmake  main.cpp  nbody  nbody.hpp  nbody_parallel.hpp  output.csv
